--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 PORT=5000
 
-MONGO_URI=mongodb://mongo:27017/shopping_cart
+MONGO_URI=mongodb://localhost:27017/shopping_cart
 
 JWT_SECRET=your_secret_key
 
